# ml-learn

./: .gitignore  README.md  pyproject.toml
docs/: auto_ml.md  classisfication.md  deep_learning.md  evaluation.md  preprocessing.md
notebooks/: classification.ipynb
notebooks/classification/: bulk_deformation.ipynb  pasteurizer.ipynb
notes/: README.md
notes/case_study_1/: experiment.ipynb
notes/case_study_2/: experiment.ipynb
notes/case_study_3/: data.csv  experiment.ipynb  raw_data.csv  transform.py
notes/case_study_4/: experiment.ipynb
resources/: README.md
resources/classification/: data_list.yaml
resources/regression/: data_list.yaml
src/ml_learn/classification/: main.py
src/utils/: hprint.py
