[tool.poetry]
name = "ml_learn"
version = "0.1.0"
description = ""
authors = ["iujunhyung <junehyung@iyulab.com>"]
readme = "README.md"
packages = [
  { include = "internal", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
graphviz = "^0.20.3"
seaborn = "^0.13.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
pydotplus = "^2.0.2"
ipython = "^8.29.0"
ipykernel = "^6.29.5"
pygad = "^3.4.0"
xlrd = "^2.0.1"
tensorflow = "^2.18.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
